--- a/work/package.json
+++ b/work/package.json
@@ -23,5 +23,20 @@
     "tailwindcss": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.3"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jana2222222/Work.git"
+  },
+  "keywords": [
+    "https://github.com/jana2222222/Work.git"
+  ],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jana2222222/Work/issues"
+  },
+  "homepage": "https://github.com/jana2222222/Work#readme"
 }
