--- a/work/package.json
+++ b/work/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "work",
-  "version": "0.1.0",
-  "private": true,
+  "name": "works",
+  "version": "1.1.4",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -28,11 +27,9 @@
   "main": "postcss.config.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jana2222222/Work.git"
+    "url": "https://github.com/jana2222222/Work"
   },
-  "keywords": [
-    "https://github.com/jana2222222/Work.git"
-  ],
+  
   "author": "",
   "license": "ISC",
   "bugs": {
